fix watch thumbnail overflow

--- a/style.css
+++ b/style.css
@@ -147,6 +147,12 @@ footer, noscript header {
   flex-wrap: wrap;
 }
 
+#thumbnails {
+  width: 100%;
+  height: auto;
+  max-width: 320px;
+  max-height: 240px;
+}
 /* sets content area scale based on horizontal resolution */
 @media screen and (max-width: 950px) {
   #maincontent {
